# phanalist

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  composer.json  phanalist  phanalist.php  phanalist.yaml
.githooks/: pre-push
.github/: ci.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: new-rule.md
.github/workflows/: build.yml  cd.yml  ci.yml  image.yml  release.yml  rust-clippy.yml  rust.yml  sarif.yml
.github/workflows/scripts/: check_publication.sh  get_version.sh  increment_version.sh  run_publication.sh
docker/: aarch64-unknown-linux-gnu  aarch64-unknown-linux-musl  x86_64-unknown-linux-gnu  x86_64-unknown-linux-musl
docs/: adding_new_rule.md  installation.md
release/aarch64-apple-darwin/: phanalist
release/x86_64-apple-darwin/: phanalist
src/: analyse.rs  baseline.rs  config.rs  debug_stats.rs  engineer.rs  fakeClass.php  file.rs  indexer.rs  language_server_protocol.rs  lib.rs  lsp.rs  main.rs  output.rs  paths.rs  project.rs  results.rs  rules.rs  storage.rs  target.php  traverse.rs
src/outputs/: chart.rs  codeclimate.rs  gitlab.rs  json.rs  mod.rs  sarif.rs  text.rs
src/rules/: E001.rs  E0010.rs  E0011.rs  E002.rs  E003.rs  E004.rs  E005.rs  E006.rs  E007.rs  E008.rs  E009.rs  ast_child_statements.rs  class.rs  e0.rs  e001.rs  e0010.rs  e0011.rs  e002.rs  e003.rs  e004.rs  e005.rs  e006.rs  e007.rs  e008.rs  e009.rs  e1.rs  e10.rs  e11.rs  e12.rs  e13.rs  e14.rs  e15.rs  e16.rs  e17.rs  e18.rs  e19.rs  e2.rs  e20.rs  e21.rs  e22.rs  (+17 more)
src/rules/examples/: phanalist.yaml
src/rules/examples/e0/: example.php
src/rules/examples/e1/: bin_with_valid_openning_tag.php  e1.md  full_opening_tag_not_first_column.php  full_opening_tag_not_first_line.php  full_opening_tag_valid.php  short_opening_tag_not_first_column.php  short_opening_tag_not_first_line.php  short_opening_tag_valid.php
src/rules/examples/e10/: e10.md  npath.php
src/rules/examples/e11/: define_in_constructor.php  detect_@.php  e11.md  example.php  increment_in_method.php  increment_local_in_method.php  set_in_constructor.php  set_in_method.php  set_local_in_method.php
src/rules/examples/e12/: array_null_coalescing_or_array.php  array_null_coalescing_or_null.php  define_in_constructor.php  increment_array_in_method.php  increment_in_method.php  increment_in_static_method.php  increment_local_in_method.php  increment_local_in_static_method.php  read_array_null_coalescing_or_array.php  read_array_null_coalescing_or_null.php  read_in_method_call.php  read_in_return.php  read_local_set.php  read_null_coalescing_or_throw.php  read_static_array_null_coalescing_or_array.php  read_static_array_null_coalescing_or_null.php  read_static_null_coalescing_or_throw.php  set_array_in_method.php  set_array_in_null_coalescing.php  set_in_assigment.php  set_in_constructor.php  set_in_method.php  set_in_method_catch.php  set_in_method_finalliy.php  set_in_method_ignore_ns.php  set_in_method_try.php  set_in_method_wth_reset_interface.php  set_in_null_coalescing.php  set_in_return.php  set_in_return_nested_method.php  (+6 more)
tests/: repro.rs  repro_php84.rs
tests/fixtures/: hooks.php
tests/wrapper/: WrapperTest.php
(+101 files in other folders)
