[package]
name = "phanalist"
version = "0.1.21"
edition = "2021"
license = "MIT"
description = "Performant static analyzer for PHP, which is extremely easy to use. It helps you catch common mistakes in your PHP code."
readme = "./README.md"
categories = ["development-tools"]
include = ["/Cargo.toml", "/LICENSE", "/README.md", "/src/**"]
keywords = ["PHP", "Refactoring", "Phanalist"]
repository = "https://github.com/denzyldick/phanalist"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
cli-table = "0.4.7"
colored = "2.0.0"
jwalk = "0.8.1"
serde = "1.0.152"
serde_json = "1.0.93"
serde_yaml = "0.9.21"
walkdir = "2.3.2"
indicatif = "0.17.7"
exitcode = "1.1.2"
memory-stats = "1.0.0"
human_bytes = "0.4"
serde-sarif = "=0.5.0"
mago-parser = "0.22.2"
mago-ast = "0.22.2"
mago-span = "0.22.2"
mago-source = "0.22.2"
mago-interner = "0.22.2"
mago-lexer = "0.22.2"

[lib]
crate-type = ["cdylib", "rlib"]
