[package]
name = "phanalist"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Performant static analyzer for PHP, which is extremely easy to use. It helps you catch common mistakes in your PHP code."
readme = "./README.md"
categories = ["development-tools"]
include = ["/Cargo.toml", "/LICENSE", "/README.md", "/src/**"]
keywords = ["PHP", "Refactoring", "Phanalist"]
repository = "https://github.com/denzyldick/phanalist"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
cli-table = "0.5.0"
colored = "3.1.1"
jwalk = "0.8.1"
serde = "1.0.152"
serde_json = "1.0.150"
serde_yaml = "0.9.21"
indicatif = "0.18.4"
exitcode = "1.1.2"
memory-stats = "1.0.0"
human_bytes = "0.4"
serde-sarif = "=0.5.0"
mago-syntax = "1.30"
mago-database = "1.30"
mago-span = "1.30"
bumpalo = "3"
git2 = "0.20"
gix = { version = "0.84", features = ["blame"] }
chrono = "0.4"

[features]
default = []
chart-image = ["dep:plotters"]

[dependencies.plotters]
version = "0.3"
optional = true
default-features = false
features = ["svg_backend", "bitmap_backend", "bitmap_encoder", "line_series", "point_series"]

[lib]
crate-type = ["rlib"]
