[package]
name = "phanalist"
version = "1.1.1"
edition = "2021"
license = "MIT"
description = "Performant static analyzer for PHP, which is extremely easy to use. It helps you catch common mistakes in your PHP code."
readme = "./README.md"
categories = ["development-tools"]
include = ["/Cargo.toml", "/LICENSE", "/README.md", "/src/**"]
keywords = ["PHP", "Refactoring", "Phanalist"]
repository = "https://github.com/denzyldick/phanalist"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
cli-table = "0.5.0"
colored = "3.1.1"
jwalk = "0.8.1"
serde = "1.0.152"
serde_json = "1.0.150"
serde_yaml = "0.9.21"
indicatif = "0.18.4"
exitcode = "1.1.2"
memory-stats = "1.0.0"
human_bytes = "0.4"
serde-sarif = "=0.5.0"
mago-syntax = "1.40"
mago-database = "1.40"
mago-span = { version = "1.40", features = ["serde"] }
mago-allocator = "1.40"
gix = { version = "0.85", features = ["blame"] }
chrono = "0.4"
lsp-server = "0.7.6"
lsp-types = "0.94.1"


[lib]
crate-type = ["rlib"]
